# guardian-health-peripheral-monitor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pipeline.yml
include/: peripherals.hpp
src/: main.cpp  main.cpp.old
systemd/: guardian.service
